mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_undefined_type_list_new.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Undefined variable 'list'
--> test_scripts/error_cases/semantic_undefined_type_list_new.mux:2:19
   |
 2 | auto empty_list = list.new()
   |                   ^^^^
   |
= help: List has no '.new()' constructor. Use '[]' for an empty list or '[1, 2, 3]' for elements. For example: list<int> my_list = []
